attempting to fix background image not showing up on deployed website

--- a/css/templatemo-style.css
+++ b/css/templatemo-style.css
@@ -18,7 +18,7 @@ a, button { transition: all 0.3s ease; }
 html {
   box-sizing: border-box;
   -ms-overflow-style: scrollbar;
-  overflow-x: hidden;
+  /* overflow-x: hidden; */
 }
 
 *,
